force-app/main/default/objects/Inventory__c/fields/BQR_Local__c.field-meta.xml
<CustomField>
    <fullName>BQR_Local__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Local BQR rep for system.</description>
    <label>BQR Local</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Inventories (BQR Local)</relationshipLabel>
    <relationshipName>Inventories1</relationshipName>
    <type>Lookup</type>
</CustomField>