force-app/main/default/objects/Inventory__c/fields/BSO_Local__c.field-meta.xml
<CustomField>
    <fullName>BSO_Local__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Local BSO of system.</description>
    <label>BSO Local</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Inventories (BSO Local)</relationshipLabel>
    <relationshipName>Inventories2</relationshipName>
    <type>Lookup</type>
</CustomField>