force-app/main/default/objects/Inventory__c/fields/ERES__c.field-meta.xml
<CustomField>
    <fullName>ERES__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ERES assessment completed?</description>
    <label>ERES</label>
    <type>Checkbox</type>
</CustomField>