force-app/main/default/objects/Inventory__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Legacy ID of system</description>
    <label>Legacy ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>