force-app/main/default/objects/Inventory__c/fields/MyAppsID__c.field-meta.xml
<CustomField>
    <fullName>MyAppsID__c</fullName>
    <label>MyAppsID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>