force-app/main/default/objects/Inventory__c/fields/Review_Period__c.field-meta.xml
<CustomField>
    <fullName>Review_Period__c</fullName>
    <description>Review period of system.</description>
    <label>Review Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>