force-app/main/default/objects/Inventory__c/fields/Software_Name__c.field-meta.xml
<CustomField>
    <fullName>Software_Name__c</fullName>
    <description>Name of the software.</description>
    <label>Software Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>