force-app/main/default/objects/Inventory__c/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <description>Version of the software</description>
    <label>Software Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>