force-app/main/default/objects/Inventory__c/fields/System_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Type__c</fullName>
    <description>Type of computerized system</description>
    <label>System Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIS</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>Spreadsheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>