force-app/main/default/objects/Inventory__c/fields/TSO_Local__c.field-meta.xml
<CustomField>
    <fullName>TSO_Local__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TSO Local</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>