force-app/main/default/objects/Inventory__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>Name of the software vendor</description>
    <label>Vendor Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>