force-app/main/default/objects/Inventory__c/listViews/Mark_s_List.listView-meta.xml
<ListView>
    <fullName>Mark_s_List</fullName>
    <columns>NAME</columns>
    <columns>SystemName__c</columns>
    <columns>Vendor_Name__c</columns>
    <columns>System_Type__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Production</value>
    </filters>
    <label>Production List</label>
</ListView>